--- a/WindowsFiguras/WindowsFigura/WindowsFigura.csproj
+++ b/WindowsFiguras/WindowsFigura/WindowsFigura.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DFDD8295-FAA6-443A-9D06-98856DF8691D}</ProjectGuid>
+    <ProjectGuid>{34F9034D-E6A0-4CAC-99AE-54DDE46D6BDC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Figuras</RootNamespace>
-    <AssemblyName>Figuras</AssemblyName>
+    <RootNamespace>WindowsFigura</RootNamespace>
+    <AssemblyName>WindowsFigura</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Figura.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
